lab9/tests/invalid/wrongKeywords.js
module.exports = {
    "category_id": "10",
    "title": "watches",
    "content": "New content",
    "price": "text",
    "old_price": "50",
    "status": "0",
    "keywords": 10,
    "description": "New description",
    "hit": "0"
}